[tool.poetry]
name = "test-actions"
version = "0.1.0"
description = ""
authors = ["515hikaru <12kojima.takahiro@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
cffi = "1.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
